fix z-index

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -14,8 +14,8 @@
 }
 
 .hero {
+  min-height: 100vh;
   min-width: 100vw;
-  height: 100vh;
   background: radial-gradient(farthest-side at 50% 50%, #1b1d2b, #151622, #0f1018) no-repeat;
   z-index: -1;
 }
